// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty favorites with city correctly 1`] = `
<div>
  <div>
    <div
      className="search-bar row"
    >
      <div
        className="bigText"
      >
        Избранное
      </div>
      <div>
        <form
          onSubmit={[Function]}
        >
          <input
            id="search-input"
            onChange={[Function]}
            placeholder="Добавить новый город"
            type="search"
            value="London"
          />
          <button
            className="search-button roundButton"
          >
            +
          </button>
        </form>
      </div>
    </div>
    
  </div>
  <div
    className="favorites"
  />
</div>
`;

exports[`renders empty favorites with non valid city correctly 1`] = `
<div>
  <div>
    <div
      className="search-bar row"
    >
      <div
        className="bigText"
      >
        Избранное
      </div>
      <div>
        <form
          onSubmit={[Function]}
        >
          <input
            id="search-input"
            onChange={[Function]}
            placeholder="Добавить новый город"
            type="search"
            value=""
          />
          <button
            className="search-button roundButton"
          >
            +
          </button>
        </form>
      </div>
    </div>
    <div
      className="error-message"
    >
      Seems like the city is not valid
    </div>
  </div>
  <div
    className="favorites"
  />
</div>
`;

exports[`renders loaded favorites correctly 1`] = `
<div>
  <div>
    <div
      className="search-bar row"
    >
      <div
        className="bigText"
      >
        Избранное
      </div>
      <div>
        <form
          onSubmit={[Function]}
        >
          <input
            id="search-input"
            onChange={[Function]}
            placeholder="Добавить новый город"
            type="search"
            value=""
          />
          <button
            className="search-button roundButton"
          >
            +
          </button>
        </form>
      </div>
    </div>
    
  </div>
  <div
    className="favorites"
  >
    <div
      className="smallCityCard"
    >
      <div
        className="row SmallPreviewContainer"
      >
        <div
          className="width45 row"
        >
          <div
            className="cityTitle"
          >
            London
          </div>
          <div
            className="cityTemp"
          >
            2.48
             °C
          </div>
          <div
            className="width36px"
          >
            <img
              alt="Weather"
              className="weatherImage"
              src="/images/Haze.jpg"
            />
          </div>
        </div>
        <button
          className="roundButton removeButton"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div
        className="forecastContainer column"
      >
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Ветер
          </div>
          <div
            className="paramValue"
          >
            1.5
             meter/sec
          </div>
        </div>
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Облачность
          </div>
          <div
            className="paramValue"
          >
            haze
          </div>
        </div>
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Давление
          </div>
          <div
            className="paramValue"
          >
            756.00
             mm Hg
          </div>
        </div>
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Влажность
          </div>
          <div
            className="paramValue"
          >
            93
            %
          </div>
        </div>
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Координаты
          </div>
          <div
            className="paramValue"
          >
            [
            -0.13
            , 
            51.51
            ]
          </div>
        </div>
      </div>
    </div>
    <div
      className="smallCityCard"
    >
      <div
        className="row SmallPreviewContainer"
      >
        <div
          className="width45 row"
        >
          <div
            className="cityTitle"
          >
            Paris
          </div>
          <div
            className="cityTemp"
          >
            2.48
             °C
          </div>
          <div
            className="width36px"
          >
            <img
              alt="Weather"
              className="weatherImage"
              src="/images/Haze.jpg"
            />
          </div>
        </div>
        <button
          className="roundButton removeButton"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div
        className="forecastContainer column"
      >
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Ветер
          </div>
          <div
            className="paramValue"
          >
            1.5
             meter/sec
          </div>
        </div>
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Облачность
          </div>
          <div
            className="paramValue"
          >
            haze
          </div>
        </div>
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Давление
          </div>
          <div
            className="paramValue"
          >
            756.00
             mm Hg
          </div>
        </div>
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Влажность
          </div>
          <div
            className="paramValue"
          >
            93
            %
          </div>
        </div>
        <div
          className="forecastRow row"
        >
          <div
            className="paramTitle"
          >
            Координаты
          </div>
          <div
            className="paramValue"
          >
            [
            -0.13
            , 
            51.51
            ]
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders unloaded favorites correctly 1`] = `
<div>
  <div>
    <div
      className="search-bar row"
    >
      <div
        className="bigText"
      >
        Избранное
      </div>
      <div>
        <form
          onSubmit={[Function]}
        >
          <input
            id="search-input"
            onChange={[Function]}
            placeholder="Добавить новый город"
            type="search"
            value=""
          />
          <button
            className="search-button roundButton"
          >
            +
          </button>
        </form>
      </div>
    </div>
    
  </div>
  <div
    className="favorites"
  >
    <div
      className="smallCityCard"
    >
      <div
        className="row SmallPreviewContainer"
      >
        <div
          className="width45 row"
        >
          <div
            className="cityTitle"
          >
            City 1
          </div>
          
          
        </div>
        <button
          className="roundButton removeButton"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div>
        <div
          className="bigText"
        >
          Подождите, данные загружаются
        </div>
        <div
          className="refreshBanner"
        >
          <img
            alt="loading"
            className="refreshImage"
            src="/images/refresh.svg"
          />
        </div>
      </div>
    </div>
    <div
      className="smallCityCard"
    >
      <div
        className="row SmallPreviewContainer"
      >
        <div
          className="width45 row"
        >
          <div
            className="cityTitle"
          >
            City 2
          </div>
          
          
        </div>
        <button
          className="roundButton removeButton"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div>
        <div
          className="bigText"
        >
          Подождите, данные загружаются
        </div>
        <div
          className="refreshBanner"
        >
          <img
            alt="loading"
            className="refreshImage"
            src="/images/refresh.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
